# shima

./: .gitignore  LICENSE  README.md  aichi
.github/: dependabot.yml
.github/workflows/: seiran.yml  strikeout.yml
seiran/: Cargo.toml
seiran/src/: check.rs  config.rs  database.rs  download.rs  install.rs  lib.rs  main.rs  meta.rs
strikeout/: Cargo.toml
strikeout/src/: error.rs  lib.rs  link.rs  main.rs  scan.rs  transfer.rs
