[package]
name = "seiran"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
chrono = "0.4.19"
colored = "2.0.0"
dirs = "3.0.1"
env_logger = "0.8.3"
futures-util = "0.3.13"
log = "0.4.14"
md-5 = "0.9.1"
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["rt", "rt-multi-thread"], default-features = false }
toml = "0.5.8"
url = "2.2.1"
