[package]
name = "seiran"
version = "0.2.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
chrono = "0.4.19"
colored = "2.0.0"
dirs = "3.0.2"
env_logger = "0.8.4"
futures-util = "0.3.15"
log = "0.4.14"
md-5 = "0.9.1"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.2", features = ["rt", "rt-multi-thread"], default-features = false }
toml = "0.5.8"
url = "2.2.2"
