[package]
name = "strikeout"
version = "0.4.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.2"
log = "0.4.14"
log-panics = "2.0.0"
once_cell = "1.8.0"
regex = "1.5.4"
serde_json = "1.0.66"
simplelog = "0.10.0"
thiserror = "1.0.26"
walkdir = "2.3.2"
